fixed scroll issue, experience tab overflow handled

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,12 +1,3 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.item {
-    width: 56%;
-    overflow: visible;
-    stroke: #fff;
-    stroke-width: 2;
-    stroke-linejoin: round;
-    stroke-linecap: round;
-}
